syntax = "proto3";

package email;

option go_package = "github.com/ahsansaif47/home-kitchens/common/gRPC/generated;email";


message SendEmailRequest {
    string to = 1;
    string from = 2;
    string otp = 3;
    string subject = 4;
}

message SendEmailResponse {
    bool success = 1;
}

service EmailService {
    rpc SendOTPEmail (SendEmailRequest) returns (SendEmailResponse);
}